# 2025-RMV-task2

./: README.md
opencv_project/: CMakeLists.txt
opencv_project/src/: main.cpp
